Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-20499

FDB master doesn't pass bleve unit tests

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.1
    • 4.5.0
    • forestdb
    • None
    • Untriaged
    • Unknown
    • ForestDB: Oct 17 - Nov 4

    Description

      From the blevex CI tests: https://travis-ci.org/blevesearch/blevex/builds/151565401

      $ go test -v github.com/blevesearch/blevex/forestdb
      === RUN   TestForestDBKVCrud
      --- FAIL: TestForestDBKVCrud (0.02s)
      	crud.go:61: valid false, expected true
      === RUN   TestForestDBReaderIsolation
      --- FAIL: TestForestDBReaderIsolation (0.01s)
      	isolation.go:96: expected iterator to see 1, saw 0
      	isolation.go:148: expected iterator to see 2, saw 0
      	isolation.go:157: expected nil, got [118 97 108 45 98]
      	isolation.go:174: expected iterator to see 1, saw 0
      === RUN   TestForestDBReaderOwnsGetBytes
      --- PASS: TestForestDBReaderOwnsGetBytes (0.00s)
      === RUN   TestForestDBWriterOwnsBytes
      --- FAIL: TestForestDBWriterOwnsBytes (0.00s)
      	bytes.go:182: expected 10 k/v pairs, got 0
      === RUN   TestForestDBPrefixIterator
      --- FAIL: TestForestDBPrefixIterator (0.00s)
      	iterator.go:99: expected cats [[99 97 116 49] [99 97 116 50] [99 97 116 51]], got []
      === RUN   TestForestDBPrefixIteratorSeek
      --- FAIL: TestForestDBPrefixIteratorSeek (0.00s)
      	iterator.go:181: expected 3 keys with prefix, got 0
      	iterator.go:195: expected 3 keys with prefix, got 0
      === RUN   TestForestDBRangeIterator
      --- FAIL: TestForestDBRangeIterator (0.00s)
      	iterator.go:273: expected all [[97 49] [98 49] [98 50] [98 51] [99 49] [99 50] [99 52] [100 49]], got []
      === RUN   TestForestDBRangeIteratorSeek
      --- FAIL: TestForestDBRangeIteratorSeek (0.00s)
      	iterator.go:406: iterating from a0 returned [] instead of [b1, c1]
      === RUN   TestForestDBMerge
      --- PASS: TestForestDBMerge (0.00s)
      FAIL
      exit status 1
      FAIL	github.com/blevesearch/blevex/forestdb	0.055s
      

      Attachments

        Issue Links

          Activity

            People

              steve Steve Yen
              steve Steve Yen
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty