MB-20499: Distinguish seek_to_min/max from regular seek

SET     : a b1 b2 b3 c
ITERATOR: [b - c] skip max key
SEEK    : c (expected ITR_FAIL, returned result b3)
Reason since seek was overloaded by seek_to_max and seek_to_min
b3 was returned even in regular seek()

Change-Id: I0b98c92ca6494637400e6d3c835741f07ac5eeb4
Reviewed-on: http://review.couchbase.org/66741
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: buildbot <build@couchbase.com>